Avro Change Log

Trunk (not yet released)

  NEW FEATURES

  IMPROVEMENTS

    AVRO-1169. Java: Reduce memory footprint of resolver.
    (Hernan Otero via cutting)

  BUG FIXES

    AVRO-1171. Java: Don't call configure() twice on mappers & reducers.
    (Dave Beech via cutting)

Avro 1.7.2 (20 October 2012)

  NEW FEATURES

    AVRO-806.  Add specification of the Trevni columnar file format
    and a Java implementation of it. (cutting)

  IMPROVEMENTS

    AVRO-1146. Java: Serialize several built-in Java classes as
    strings, including BigDecimal, BigInteger, URI, URL, Date and
    File.  (Alexandre Normand and cutting)

    AVRO-1147. Java: Permit stringable map keys in reflect.
    (Alexandre Normand)

    AVRO-1151. Netty Avro server should expose the number of connections
    currently open. (Hari Shreedharan via tomwhite)

    AVRO-1149. Java: Add a constructor to generated classes with all
    fields as parameters. (Gabriel Reid via cutting)

    AVRO-1138. C: Add function for opening existing data file with non-default
    block size.  (Maxim Pugachev via dcreager)

    AVRO-1129. C: Detect when avro_schema_decref frees schema.
    (Maxim Pugachev via dcreager)

    AVRO-1162. Java: Extend AvroKeyValueOutputFormat to support
    reflection.  (Alexandre Normand via cutting)

    AVRO-1142. Clarify Snappy block compression in specification. (cutting)

  BUG FIXES

    AVRO-1128. Java: Fix SpecificRecordBase#equals() to work for
    records that contain maps.  (cutting)

    AVRO-1131. Generated build makefiles for MSYS/MinGW use Visual
    Studio compiler flags (Laurent Moss via thiru)

    AVRO-1103. Java: Fix SpecificData and mapreduce to use correct
    classloader. (cutting)

    AVRO-1135. Avro C++ fails to build on Mac. (thiru)

    AVRO-1140. Buffer.hh includes Config.hh without "../" (Jan van der
    Lugt via thiru)

    AVRO-1141. Avro data files are created without O_TRUNC (Martin
    Nagy via thiru)
