@@ -37,7 +37,13 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <!-- version properties for dependencies -->
-    <hadoop.version>0.20.205.0</hadoop.version>
+    
+    <!--
+      To build the avro-mapred module against Hadoop 2 specify
+      -Dhadoop.version=2 or leave unspecified to build against Hadoop 1
+    -->
+    <hadoop1.version>0.20.205.0</hadoop1.version>
+    <hadoop2.version>2.0.1-alpha</hadoop2.version>
     <jackson.version>1.8.8</jackson.version>
     <jetty.version>6.1.26</jetty.version>
     <jetty-servlet-api.version>2.5-20081211</jetty-servlet-api.version>
@@ -55,6 +61,7 @@
     <commons-lang.version>2.6</commons-lang.version>
     <easymock.version>3.0</easymock.version>
     <hamcrest.version>1.1</hamcrest.version>
+    <commons-httpclient.version>3.1</commons-httpclient.version>
 
     <!-- version properties for plugins -->
     <checkstyle-plugin.version>2.8</checkstyle-plugin.version>
@@ -228,7 +235,7 @@
             <links>
               <link>http://jackson.codehaus.org/${jackson.version}/javadoc/</link>
               <link>http://java.sun.com/products/servlet/2.3/javadoc/</link>
-              <link>http://hadoop.apache.org/common/docs/r${hadoop.version}/api/</link>
+              <link>http://hadoop.apache.org/common/docs/r${hadoop1.version}/api/</link>
             </links>
           </configuration>
         </plugin>
@@ -345,7 +352,7 @@
       <dependency>
         <groupId>org.apache.hadoop</groupId>
         <artifactId>hadoop-core</artifactId>
-        <version>${hadoop.version}</version>
+        <version>${hadoop1.version}</version>
       </dependency>
       <dependency>
         <groupId>org.xerial.snappy</groupId>
