@@ -59,7 +59,7 @@
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-core</artifactId>
-      <version>${hadoop.version}</version>
+      <version>${hadoop1.version}</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
